{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 39,
  "lineage": "fe76efbb-865c-36ae-033e-f609716421b2",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:056023724695:instance/i-04fff10ddeaee7fb8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09c6f057f35586d41",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04fff10ddeaee7fb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-005beb93c2fff1b87",
            "private_dns": "ip-172-31-18-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.249",
            "public_dns": "ec2-34-203-224-236.compute-1.amazonaws.com",
            "public_ip": "34.203.224.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09c6f057f35586d41",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1de220361eeb6d1",
            "tags": {
              "Name": "instance-tf",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "instance-tf",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "instance-tf"
            },
            "vpc_security_group_ids": [
              "sg-03138b104335a481e"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:network-acl/acl-018055f4e0714db44",
            "default_network_acl_id": "acl-018055f4e0714db44",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-018055f4e0714db44",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "056023724695",
            "subnet_ids": [
              "subnet-0190293b21d0beb1b",
              "subnet-0254b5cb58e3dff94",
              "subnet-079f7a59ed6d277eb",
              "subnet-096552a60e1111c9c",
              "subnet-0b5c28e3b770f1fb4",
              "subnet-0c794d879714cf197"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-default",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-default",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:route-table/rtb-08c7fabcae88bc60b",
            "default_route_table_id": "rtb-08c7fabcae88bc60b",
            "id": "rtb-08c7fabcae88bc60b",
            "owner_id": "056023724695",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-default",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-default",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:security-group/sg-0c6082c29ca9a1b4c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c6082c29ca9a1b4c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "056023724695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-default",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-default",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9670a46da730ade",
            "domain": "vpc",
            "id": "eipalloc-0d9670a46da730ade",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-113-101.compute-1.amazonaws.com",
            "public_ip": "18.235.113.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa8c0d4d68e4a7ae",
            "domain": "vpc",
            "id": "eipalloc-0aa8c0d4d68e4a7ae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-209-28-190.compute-1.amazonaws.com",
            "public_ip": "3.209.28.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0df739c7bc9cce4",
            "domain": "vpc",
            "id": "eipalloc-0f0df739c7bc9cce4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-125-185.compute-1.amazonaws.com",
            "public_ip": "34.198.125.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:internet-gateway/igw-049c561acb4008f4c",
            "id": "igw-049c561acb4008f4c",
            "owner_id": "056023724695",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9670a46da730ade",
            "association_id": "eipassoc-0555496d71bd9f112",
            "connectivity_type": "public",
            "id": "nat-0efe43953864576d9",
            "network_interface_id": "eni-097cdbc4d05ca8fc3",
            "private_ip": "172.17.10.85",
            "public_ip": "18.235.113.101",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079f7a59ed6d277eb",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa8c0d4d68e4a7ae",
            "association_id": "eipassoc-038b6529c39629a89",
            "connectivity_type": "public",
            "id": "nat-0b31607b8aee439a3",
            "network_interface_id": "eni-07a348c8163d68962",
            "private_ip": "172.17.20.145",
            "public_ip": "3.209.28.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c794d879714cf197",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0df739c7bc9cce4",
            "association_id": "eipassoc-0aa4eee8924e7e4c0",
            "connectivity_type": "public",
            "id": "nat-001d3d0e50a8ab7f3",
            "network_interface_id": "eni-069c76981c5145cc3",
            "private_ip": "172.17.30.53",
            "public_ip": "34.198.125.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0254b5cb58e3dff94",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c6cf17a727e5962c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0efe43953864576d9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c6cf17a727e5962c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e8c9bbd750ed58121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b31607b8aee439a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8c9bbd750ed5812",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ed6ca46b66f8c7a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-001d3d0e50a8ab7f3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed6ca46b66f8c7a6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-049c561acb4008f4c",
            "id": "r-rtb-054b7aa883548a7581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054b7aa883548a758",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:route-table/rtb-0c6cf17a727e5962c",
            "id": "rtb-0c6cf17a727e5962c",
            "owner_id": "056023724695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:route-table/rtb-0e8c9bbd750ed5812",
            "id": "rtb-0e8c9bbd750ed5812",
            "owner_id": "056023724695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:route-table/rtb-0ed6ca46b66f8c7a6",
            "id": "rtb-0ed6ca46b66f8c7a6",
            "owner_id": "056023724695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:route-table/rtb-054b7aa883548a758",
            "id": "rtb-054b7aa883548a758",
            "owner_id": "056023724695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-public",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-public",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07538301c57a55a6e",
            "route_table_id": "rtb-0c6cf17a727e5962c",
            "subnet_id": "subnet-096552a60e1111c9c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e97acef331611fcd",
            "route_table_id": "rtb-0e8c9bbd750ed5812",
            "subnet_id": "subnet-0b5c28e3b770f1fb4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092368dfc314fbe2e",
            "route_table_id": "rtb-0ed6ca46b66f8c7a6",
            "subnet_id": "subnet-0190293b21d0beb1b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035dfda1477073e6c",
            "route_table_id": "rtb-054b7aa883548a758",
            "subnet_id": "subnet-079f7a59ed6d277eb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ebd3fab8559a88d",
            "route_table_id": "rtb-054b7aa883548a758",
            "subnet_id": "subnet-0c794d879714cf197"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f2b71b4cb4a98e0",
            "route_table_id": "rtb-054b7aa883548a758",
            "subnet_id": "subnet-0254b5cb58e3dff94"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:subnet/subnet-096552a60e1111c9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096552a60e1111c9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056023724695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:subnet/subnet-0b5c28e3b770f1fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5c28e3b770f1fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056023724695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:subnet/subnet-0190293b21d0beb1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0190293b21d0beb1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056023724695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:subnet/subnet-079f7a59ed6d277eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079f7a59ed6d277eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056023724695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1a",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:subnet/subnet-0c794d879714cf197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c794d879714cf197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056023724695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1b",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:subnet/subnet-0254b5cb58e3dff94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0254b5cb58e3dff94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056023724695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1c",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "vpc_id": "vpc-026c2dd7f96462670"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056023724695:vpc/vpc-026c2dd7f96462670",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-018055f4e0714db44",
            "default_route_table_id": "rtb-08c7fabcae88bc60b",
            "default_security_group_id": "sg-0c6082c29ca9a1b4c",
            "dhcp_options_id": "dopt-0219044a1ba934337",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026c2dd7f96462670",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c7fabcae88bc60b",
            "owner_id": "056023724695",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc",
              "Terraform": "true",
              "Vpc": "main-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc",
              "Terraform": "true",
              "Vpc": "main-lab"
            }
          }
        }
      ]
    }
  ]
}